<?xml version="1.0" encoding="utf-8"?>
<com.handy.portal.payments.ui.element.PaymentsDetailListHeaderView
    android:id="@+id/payment_details_list_header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@drawable/background_shadow_border"
    android:orientation="vertical"
...
            android:text="@string/total_payment"
            android:textAppearance="@style/HandyTextAppearanceLarge"
            android:textStyle="normal"
            />

        <TextView
            android:id="@+id/payments_detail_total_payment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:textAppearance="@style/HandyTextAppearanceTitle"
...
