<?xml version="1.0" encoding="utf-8"?>
<com.handy.portal.ui.element.payments.PaymentsBatchListHeaderView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:id="@+id/payments_batch_list_header"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_weight="1"
                    android:textSize="@dimen/xxlarge_text_size"
                    android:textAppearance="@style/HandyTextAppearanceTitle"
                    android:text=""
                    android:id="@+id/payments_current_week_expected_payment"/>
            </TableRow>

            <TableRow
                android:weightSum="2"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/row_margin"
...
