<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        >

        <include
            layout="@layout/layout_fetch_error"
            tools:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/account_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/contact_info_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/account_settings_cell_height"
                android:background="@drawable/background_list_entry"
                android:clickable="true"
                android:padding="@dimen/default_padding"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/your_contact_information"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/default_text_size"
                    />

                <TextView
                    android:id="@+id/provider_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/contact_tier_chevron"
                    android:layout_toStartOf="@+id/contact_tier_chevron"
                    android:textColor="@color/tertiary_gray"
                    android:textSize="@dimen/default_text_size"
                    tools:text="Mike Gallagher"
                    />

                <ImageView
                    android:id="@+id/contact_tier_chevron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:contentDescription="@string/chevron_description"
                    android:src="@drawable/ic_chevron_gray"
                    />

            </RelativeLayout>

            <include layout="@layout/divider"/>

            <RelativeLayout
                android:id="@+id/edit_payment_option"
                android:layout_width="match_parent"
                android:layout_height="@dimen/account_settings_cell_height"
                android:background="@drawable/background_list_entry"
                android:clickable="true"
                android:padding="@dimen/default_padding"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/edit_payment_method"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/default_text_size"
                    />

                <TextView
                    android:id="@+id/verification_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/edit_payment_option_chevron"
                    android:layout_toStartOf="@+id/edit_payment_option_chevron"
                    android:textColor="@color/tertiary_gray"
                    android:textSize="@dimen/default_text_size"
                    tools:text="verified"
                    />

                <ImageView
                    android:id="@+id/edit_payment_option_chevron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:contentDescription="@string/chevron_description"
                    android:src="@drawable/ic_chevron_gray"
                    />

            </RelativeLayout>

            <include layout="@layout/divider"/>

            <LinearLayout
                android:id="@+id/order_resupply_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/account_settings_cell_height"
                    android:background="@drawable/background_list_entry"
                    android:padding="@dimen/default_padding"
                    >

                    <TextView
                        android:id="@+id/order_resupply_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/supplies"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/default_text_size"
                        />

                    <ImageView
                        android:id="@+id/payment_tier_chevron"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginStart="@dimen/default_margin"
                        android:contentDescription="@string/chevron_description"
                        android:src="@drawable/ic_chevron_gray"
                        />

                </RelativeLayout>

                <include layout="@layout/divider"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/income_verification_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/account_settings_cell_height"
                android:background="@drawable/background_list_entry"
                android:clickable="true"
                android:padding="@dimen/default_padding"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/income_verification"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/default_text_size"
                    />

                <TextView
                    android:id="@+id/send_email_text"
                    style="@style/CircularBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    android:text="@string/send_email"
                    android:textAllCaps="true"
                    android:textColor="@color/handy_blue"
                    android:textSize="@dimen/default_text_size"
                    />

            </RelativeLayout>

            <include layout="@layout/divider"/>

            <RelativeLayout
                android:id="@+id/log_out_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/account_settings_cell_height"
                android:background="@drawable/background_list_entry"
                android:clickable="true"
                android:padding="@dimen/default_padding"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/log_out"
                    android:textColor="@color/error_red"
                    android:textSize="@dimen/default_text_size"
                    />

            </RelativeLayout>

            <include layout="@layout/divider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/default_padding"
                >

                <TextView
                    android:id="@+id/build_version_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/tertiary_gray"
                    android:textSize="@dimen/xsmall_text_size"
                    tools:text="v0.11.4"
                    />

                <TextView
                    android:id="@+id/software_licenses_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/software_licenses"
                    android:textColor="@color/tertiary_gray"
                    android:textSize="@dimen/xsmall_text_size"
                    />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
