<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    android:id="@+id/tabs"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/light_grey"
    android:orientation="horizontal"
    >

    <com.handy.portal.ui.widget.DimRadioButton
        android:id="@+id/button_jobs"
        style="@style/TabButton"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:drawableTop="@drawable/ic_menu_search"
        android:text="@string/tab_claim"
        />

    <com.handy.portal.ui.widget.DimRadioButton
        android:id="@+id/button_schedule"
        style="@style/TabButton"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:checked="false"
        android:drawableTop="@drawable/ic_menu_schedule"
        android:text="@string/tab_schedule"
        />

    <com.handy.portal.ui.widget.DimBadgeRadioButton
        android:id="@+id/button_notifications"
        style="@style/TabButton"
        android:layout_width="0dp"
        android:layout_weight="15"
        android:checked="false"
        android:drawableTop="@drawable/notification_icon_with_badge"
        android:text="@string/tab_notifications"
        />

    <com.handy.portal.ui.widget.DimRadioButton
        android:id="@+id/button_more"
        style="@style/TabButton"
        android:layout_width="0dp"
        android:layout_weight="10"
        android:drawableTop="@drawable/ic_menu_more"
        android:text="@string/tab_more"
        />

</RadioGroup>
