<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    android:id="@+id/nav_tray_links"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <RadioButton
        android:id="@+id/nav_link_ratings_and_feedback"
        style="@style/TrayButton"
        android:drawableLeft="@drawable/ic_cup_gray"
        android:drawableStart="@drawable/ic_cup_gray"
        android:text="@string/ratings_and_feedback"
        />

    <RadioButton
        android:id="@+id/nav_link_payments"
        style="@style/TrayButton"
        android:drawableLeft="@drawable/ic_tray_wallet"
        android:drawableStart="@drawable/ic_tray_wallet"
        android:text="@string/payments"
        />

    <RadioButton
        android:id="@+id/nav_link_refer_a_friend"
        style="@style/TrayButton"
        android:drawableLeft="@drawable/tray_refer_a_friend"
        android:drawableStart="@drawable/tray_refer_a_friend"
        android:text="@string/earn_more_money"
        />

    <RadioButton
        android:id="@+id/nav_link_account_settings"
        style="@style/TrayButton"
        android:drawableLeft="@drawable/tray_account_settings"
        android:drawableStart="@drawable/tray_account_settings"
        android:text="@string/account_settings"
        />

    <RadioButton
        android:id="@+id/nav_link_video_library"
        style="@style/TrayButton"
        android:drawableLeft="@drawable/tray_video_library"
        android:drawableStart="@drawable/tray_video_library"
        android:text="@string/video_library"
        />

    <RadioButton
        android:id="@+id/nav_link_help"
        style="@style/TrayButton"
        android:drawableLeft="@drawable/ic_lifesaver"
        android:drawableStart="@drawable/ic_lifesaver"
        android:text="@string/help"
        />

</RadioGroup>
