...
    android:orientation="vertical"
    >

    <include layout="@layout/element_profile_section_header"/>

    <LinearLayout
        android:id="@+id/profile_contact_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        >
...
