...
            android:drawableLeft="@drawable/tray_refer_a_friend"
            android:drawableStart="@drawable/tray_refer_a_friend"
            android:text="@string/earn_more_money"
            />

        <TextView
            android:id="@+id/more_account_settings"
            style="@style/ListItem"
            android:drawableLeft="@drawable/tray_account_settings"
            android:drawableStart="@drawable/tray_account_settings"
            android:text="@string/account_settings"
            />

...
