...
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_black"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bank_account_option"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/background_list_entry"
        android:clickable="true"
        android:padding="@dimen/default_padding">

...
